--- a/config/config.json
+++ b/config/config.json
@@ -2,5 +2,6 @@
   "base_url": "https://www.resortpass.com/",
   "browser": "chrome",
   "implicit_wait": 3,
-  "default_timeout": 7
+  "default_timeout": 7,
+  "headless": false
 }
